...
      backgroundColor: theme === "dark" ? getColor("gray-900") : "white",
    },
    tabBarIcon: ({ color }) => {
      const iconName =
        route.name === "Home"
          ? "home"
          : route.name === "Profile"
          ? "logout"
          : route.name === "Collection"
          ? "book"
          : route.name === "Add" && "plussquare"

      return route.name === "Collection" ? (
...
