...
          },
          tabBarStyle: {
            backgroundColor: theme === "dark" ? getColor("zinc-950") : "white",
          },
        }}>
        <MaterialTopTabs.Screen name="recommendations" options={{ title: "For You" }} />
        <MaterialTopTabs.Screen name="index" options={{ title: "Top" }} />
        <MaterialTopTabs.Screen name="search" options={{ title: "Search" }} />
      </MaterialTopTabs>
    </View>
  )
}

